# closure-capture

./: Cargo.toml  README.md
src/: lib.rs
